# mobile_robots_playground

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/diff_drive/diffdrive_bringup/: package.xml  setup.cfg
src/diff_drive/diffdrive_bringup/launch/: diffdrive_bringup.launch.py
src/diff_drive/diffdrive_bringup/worlds/: default_world.sdf
src/diff_drive/diffdrive_description/: package.xml
src/diffdrive_bringup/: setup.py
src/diffdrive_bringup/config/: controllers.yaml  ign_bridge.yaml  lidar_slam.yaml
src/diffdrive_bringup/launch/: diffdrive_bringup.launch.py  lidar_slam.launch.py
src/diffdrive_bringup/rviz/: localization.rviz
src/diffdrive_bringup/worlds/: default_world.sdf
src/diffdrive_description/: setup.cfg  setup.py
src/diffdrive_description/urdf/: macros.urdf.xacro  robot.urdf.xacro
src/tracked_vehicle/tracked_vehicle_interfaces/: CMakeLists.txt  package.xml
src/tracked_vehicle/tracked_vehicle_interfaces/srv/: ChainedTracksCommand.srv
src/tracked_vehicle/tracked_vehicle_simualtion/: setup.cfg
src/tracked_vehicle/tracked_vehicle_simualtion/rviz/: tracked.rviz
src/tracked_vehicle/tracked_vehicle_simulation/: package.xml  setup.cfg  setup.py
src/tracked_vehicle/tracked_vehicle_simulation/config/: ign_bridge.yaml
src/tracked_vehicle/tracked_vehicle_simulation/launch/: tracked_vehicle_bringup.launch.py
src/tracked_vehicle/tracked_vehicle_simulation/models/: tracked.sdf
src/tracked_vehicle/tracked_vehicle_simulation/worlds/: tracked_vehicle_world.sdf
src/tracked_vehicle/tracks_controller/: package.xml  setup.cfg  setup.py
src/tracked_vehicle/tracks_controller/tracks_controller/: TracksController.py  tracks_controller.py
src/tracked_vehicle_simualtion/: package.xml  setup.py
src/tracked_vehicle_simualtion/config/: ekf.yaml  ign_bridge.yaml
src/tracked_vehicle_simualtion/launch/: tracked_vehicle_bringup.launch.py
src/tracked_vehicle_simualtion/models/: tracked.sdf
