<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracked_vehicle_simulation</name>
  <version>1.0.0</version>
  <description>Tracked vehicle simulation</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros_gzharmonic_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gzharmonic_bridge</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
