<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracks_controller</name>
  <version>1.0.0</version>
  <description>Simple tracks controller node</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>tracked_vehicle_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
